<resources>
    <string name="app_name">OpenWeather</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="_24_hours_next">24h tiếp theo</string>
    <string name="touch_a_day_to_see_forecast_by_day_and_night">Touch a day to see forecast by day and night</string>
    <string name="air_quality">Chất lượng không khí</string>
    <string name="details">Chi tiết</string>
    <string name="now">NOW</string>
    <string name="icon_temp">°</string>
    <string name="feels_like">Cảm giác như</string>
    <string name="settings">Cài đặt</string>
    <string name="manage_location">Thêm địa điểm</string>
    <string name="temperature">Đơn vị nhiệt độ</string>
    <string name="unit_settings">Unit settings</string>
    <string name="rate">Đánh giá</string>
    <string name="share">Chia sẻ</string>
    <string name="feedback_and_suggestion">Phản hồi và Góp ý</string>
    <string name="search_location">Tìm kiếm địa điểm</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="ok">Ok</string>
    <string name="warning_empty">Thông tin đăng nhập, đăng ký không được để trống</string>
    <string name="wind">Gió</string>
    <string name="wind_gusts">Gió giật</string>
    <string name="humidity">Độ ẩm</string>
    <string name="cloud">Lượng mây</string>
    <string name="rain">Mưa</string>
    <string name="visibility">Tầm nhìn xa</string>
    <string name="hourly">Theo giờ</string>
    <string name="_7_next_days">7 ngày tiếp theo</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="no_account">Không có tài khoản</string>
    <string name="chance_of_rain">khả năng mưa</string>
    <string name="wind_speed">Tốc độ gió</string>
    <string name="pressure">Áp suất</string>
    <string name="fav_loc">Đia điểm yêu thích</string>
    <string name="add_fav_loc">Thêm địa điểm hiện tại vào yêu thích</string>
</resources>