<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/weather_black"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:padding="@dimen/_8sdp"
            android:gravity="center"
            android:background="@drawable/bg_frame"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:padding="@dimen/_4sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/email"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/bg_edit_text"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:hint="@string/email"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_11sdp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/password"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/bg_edit_text"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:hint="@string/password"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_11sdp"
                    android:inputType="textPassword"
                    android:id="@+id/pass"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_edit_text"
                android:paddingVertical="@dimen/_4sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_medium"
                android:backgroundTint="#009737"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/signBtn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/otherOptionBtn"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>