<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_frame"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15:00"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:id="@+id/hour"
                    android:layout_marginBottom="@dimen/_2sdp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:src="@drawable/wi_umbrella"
                        app:tint="@color/white" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="82%"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/_12sdp"
                        android:id="@+id/percentRain"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/sun_cloudy"
                    android:id="@+id/iconWeather"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="28F"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:id="@+id/temp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/expandView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat_regular"
                    android:textStyle="italic"
                    android:id="@+id/status"
                    android:gravity="end"
                    tools:ignore="NestedWeights" />
                <ImageView
                    android:id="@+id/iconExpand"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_back"
                    android:rotation="-90"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:visibility="gone"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataWind"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_gusts"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_gusts"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataWindGust"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataHumidity"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cloud"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataCloud"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataPressure"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visibility"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/visibility"
                            android:textColor="#9EFFFFFF"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/textDataVisibility"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>